kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-frontend-about
  namespace: core-frontend
  labels:
    app: core-frontend-about
spec:
  type: ClusterIP
  selector:
    app: core-frontend-about
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
