kube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-frontend-about
  namespace: core-frontend
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-system
  hostnames:
    - core.preferans.uk
    - core.ac.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: core-frontend-about
          port: 80
